# slider-track-model

./: .gitignore  AUDIT.md  README.md  export_onnx.py  gui_slider.py  inference.py  main.py  pyproject.toml  train.py  validate.py
checkpoints/: wgan.pt  wgan_epoch1000.pt  wgan_epoch1500.pt  wgan_epoch2000.pt  wgan_epoch500.pt
dataset/: __init__.py  io.py  preprocess.py
dataset/compare/: index.json  model.json
dataset/test/: trajectory_dataset-100.json
dataset/train/: trajectory_dataset-100.json  trajectory_dataset-150.json  trajectory_dataset-200-1.json  trajectory_dataset-200-2.json  trajectory_dataset-200-3.json  trajectory_dataset-50-1.json  trajectory_dataset-50.json
example/: onnx_runtime_demo.py
model/: __init__.py  wgan.py
web/: index.html
