[project]
name = "slider-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "matplotlib>=3.7",
    "pynput>=1.7",
    "onnx>=1.20.1",
    "onnxruntime>=1.16",
    "opencv-python>=4.8",
    "playwright>=1.40",
]
